--- a/index.html
+++ b/index.html
@@ -1,34 +1,18 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Simple Menu Coffee</title>
-  <link rel="stylesheet" href="style.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Happy Birthday</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-
-  <header class="header">
-    <div class="container header-inner">
-
-      <!-- Left: Logo -->
-      <div class="logo">
-        <span class="logo-mark">M</span>
-        <span class="logo-text">Menu</span>
-      </div>
-
-      <!-- Right: Navigation -->
-      <nav class="nav">
-        <a href="#">Coffee De Village</a>
-        <a href="#">Ice Latte</a>
-        <a href="#">Ice Amoricano</a>
-        <a href="#">Matcha Latte</a>
-      </nav>
-
-    
-
+    <div class="container">
+        <h1 id="message">🎉 Happy Birthday to me 🎂</h1>
+        <button id="btn">Click for Surprise 🎁</button>
+        <div id="balloons"></div>
     </div>
-  </header>
 
+    <script src="script.js"></script>
 </body>
 </html>
